--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.44.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation 'com.afollestad.assent:core:3.0.0-RC4'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 }
